# tzdate-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  STATUS.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: driver.rs  parse_seconds.rs  strftime.rs
lab/oracle/: sweep.py
reports/: RECEIPT-TZDATE-RS-1.md
reports/admission/: RECEIPT-ADMISSION.md
reports/fuzz/: RECEIPT-FUZZ.md
reports/kani/: RECEIPT-KANI.md
reports/oracle/: RECEIPT-ORACLE-SWEEP.md
src/: lib.rs  main.rs  posixtz.rs  strftime.rs  tzif.rs
tests/: cases.rs
tests/fixtures/golden/: err_bad_r.txt  err_multiple_r.txt  err_unknown_operand.txt  err_unknown_opt.txt  kathmandu.txt  london_summer.txt  lord_howe_dst.txt  ny_summer.txt  ny_winter.txt  r_hex_octal_neg.txt  utc_all_composites.txt  utc_billennium.txt  utc_epoch.txt  utc_fmt.txt
